package dictionary.filters;

/**
 * Created by Catalin on 5/24/2015 .
 */
public interface CharacterFilter {
    String filterCharacters(String word, boolean change);
}
